# kg-phenio

./: .gitignore  Jenkinsfile  Jenkinsfile.monarch-ci  README.md  download.yaml  generate_subgraphs.py  graph_prefixcats.py  merge.yaml  neat.yaml  neat_local.yaml  pyproject.toml  run.py  setup.py  sonar-project.properties  tox.ini  transform-test.yaml  transform.yaml
.github/workflows/: main.yml  qc.yml
kg_ontoml/: transform.py
kg_ontoml/transform_utils/ontology/: monarch_transform.py  (+1 more)
kg_ontoml/utils/: transform_utils.py
kg_phenio/: __init__.py  __version__.py  download.py  normalize.py  query.py  transform.py
kg_phenio/kg_ontoml/: __version__.py  transform.py
kg_phenio/merge_utils/: merge_kg.py
kg_phenio/transform_utils/: __init__.py  sources.py  transform.py
kg_phenio/utils/: __init__.py  download_utils.py  robot_utils.py  transform_utils.py
notebooks/: KG-OntoML.ipynb
notebooks/analyze_mp_hp_mappings/: .gitignore  add_labels.py  labels.tsv  unmapped_prediction  unmapped_prediction_with_labels.tsv  unmapped_prediction_with_labels_no_existing_edges.tsv
ontoml_scripts/: Makefile  odk.sh
ontoml_scripts/scripts/: ontology-kg-preprocessing-kit.py  prepare_monarch_subsets.sh
post_setup/: post_setup.py
project_name/utils/: nlp_utils.py
tests/: __init__.py  test_download.py  test_download_from_yaml.py  test_remove_obsoletes.py  test_run.py  test_transform_class.py  test_transform_utils.py  test_version.py
tests/resources/: graph_with_obs_edges.tsv  graph_with_obs_nodes.tsv  graph_with_obs_part_edges.tsv  graph_with_obs_part_nodes.tsv  mock_download.py
(+32 files in other folders)
