[tool.poetry]
name = "kg-phenio"
version = "0.1.1"
description = "A graph for accessing and comparing knowledge concerning phenotypes across species and genetic backgrounds."
authors = ["caufieldjh <j.harry.caufield@gmail.com>"]
license = "BSD-3"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
click = "^8.1.3"
kgx = ">=2.0.0"
koza = "^0.3.1"
multi-indexer = "^0.0.5"
sh = "^1.14.3"
Sphinx = "^5.2.3"
tqdm = "^4.64.1"
wget = "^3.2"
universalizer = "^0.0.10"
biolink-model = ">=3.5.3"
pyyaml = ">=6.0.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
pytest-cov = "^4.0.0"
codacy-coverage = "^1.3.11"
parameterized = "^0.8.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
